--- a/first-ever.html
+++ b/first-ever.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8" >
+    <title>this is the best title</title>
+    <style>
+        
+        p {
+            color: 0000ff;
+            align-content: center;
+
+        }
+
+        div{
+            padding: 10px;
+            margin: 10px;
+            background-color: f0f000;
+        }
+    </style>
+
+</head>
 <body>
 
 <h1>My First Heading</h1>
 <div>
     <p>My first paragraph.</p>
-<div>
+</div>
 </body>
 </html>
