--- a/first-ever.html
+++ b/first-ever.html
@@ -6,7 +6,7 @@
     <style>
         
         p {
-            color: 0000ff;
+            color: #0000ff;
             align-content: center;
 
         }
@@ -14,7 +14,7 @@
         div{
             padding: 10px;
             margin: 10px;
-            background-color: f0f000;
+            background-color: #f0f000;
         }
     </style>
 
@@ -24,6 +24,7 @@
 <h1>My First Heading</h1>
 <div>
     <p>My first paragraph.</p>
+    <p>and the second one too.</p>
 </div>
 </body>
 </html>
