--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="mod2_solution.css">
+    <link rel="stylesheet" href="css/mod2_solution.css">
     <meta charset="utf-8" >
     <title {margin: "center"} >this is the best title</title>
     
